# Nornikel-AI-Science-Hack

./: .env.example  .gitignore  README.md  docker-compose.yml  pipeline.py  pyproject.toml  run.py
src/: kg_builder.py  parser.py
src/db/data_loader/: neo4j_builder.py
src/db/data_loader/cypher/: claim_constraints.cypher  create_claims.cypher  create_facts.cypher  entity_constraints.cypher  entity_index.cypher  fact_constraints.cypher  merge_entities.cypher  merge_relations.cypher
src/db/data_processor/: deduplication.py  extractor.py  prompts.py  schemas.py
src/utils/: enums.py  llm_worker.py
