[project]
name = "nornikel-ai-science-hack"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim Abramov",email = "abramovmaxim.894@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neo4j (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
